# Qt_Lunch_Lottery

./: .gitignore  CMakeLists.txt  README.md  images.qrc  main.cpp
include/: community.h  imagewidget.h  mainwidget.h
src/: community.cpp  imagewidget.cpp  mainwidget.cpp
ui/: mainwidget.ui
